# bactopia-py

./: .flake8  .gitignore  .gitpod.yml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  catalog.json  environment.yml  justfile  llms.txt  pyproject.toml
.claude/: settings.json
.claude/skills/update-catalog/: SKILL.md
.github/workflows/: release.yml  test.yml
bactopia/: BactopiaGraphs-Trial.py  __init__.py  atb.py  conda.py  const.py  ncbi.py  nf.py  outputs.py  parse.py  scaffold.py  summary.py  utils.py
bactopia/cli/: __init__.py  atb_formatter.py  catalog.py  citations.py  common.py  datasets.py  docs.py  download.py  jsonify.py  lint.py  prepare.py  prune.py  review.py  scaffold.py  search.py  status.py  summary.py  sysinfo.py  testing.py  update.py  workflows.py
bactopia/cli/atb/: atb_downloader.py  atb_formatter.py
bactopia/cli/helpers/: merge_schemas.py
bactopia/cli/pipeline/: bracken_to_excel.py  check_assembly_accession.py  check_fastqs.py  cleanup_coverage.py  kraken_bracken_summary.py  mask_consensus.py  midas_summary.py  scrubber_summary.py  teton_prepare.py
bactopia/cli/pubmlst/: build.py  download.py  setup.py
bactopia/databases/: ena.py  ncbi.py  pubmlst.py
bactopia/databases/pubmlst/: constants.py  utils.py
bactopia/lint/: __init__.py  citations.py  docs.py  models.py  runner.py
bactopia/lint/rules/: __init__.py  module_rules.py  subworkflow_rules.py  workflow_rules.py
bactopia/parsers/: __init__.py  amr.py  amrfinderplus.py  annotation.py  annotator.py  ariba.py  assembler.py  assembly.py  blast.py  citations.py  coverage.py  error.py  gather.py  generic.py  kraken.py  mapping.py  minmers.py  mlst.py  nextflow.py  parsables.py  qc.py  sketcher.py  variants.py  versions.py  workflows.py
bactopia/templates/: logos.py  nextflow-config.j2  nextflow_schema.json.j2
bactopia/templates/bactopia/: llms.txt.j2
bactopia/templates/nextflow/: nextflow.config.j2  params.config.j2  process.config.j2
bactopia/templates/scaffold/module/: main.nf.j2  module.config.j2  schema.json.j2
bactopia/templates/scaffold/subworkflow/: main.nf.j2
bactopia/templates/scaffold/workflow/: main.nf.j2  nextflow.config.j2
tests/: conftest.py
tests/fixtures/parsers/: amrfinderplus.tsv  annotator_bakta.txt  annotator_prokka.txt  assembler.tsv  bracken_report.txt  catalog.json  citations.yml  coverage.txt  coverage_tabbed.txt  gather_meta.tsv  kraken2_report.txt  mlst_no_header.tsv  qc_single.json  sample.fasta  sample.json  sample.tsv  sample.vcf  sample.yaml  sample1_R1-final.json  sample1_R2-final.json  versions.yml
tests/fixtures/parsers/nextflow/: base.config  params.config  process.config  profiles.config
tests/fixtures/parsers/pipeline/: bracken_abundances.tsv  bracken_adjusted_abundances.tsv  fq_low.json  fq_r1.json  fq_r2_low_bp.json  fq_r2_unequal_reads.json  fq_scrubbed.json  mask_coverage.txt  mask_ref.fasta  mask_subs.vcf  midas_report.tsv  sizemeup_bacteria.tsv  sizemeup_nonbacteria.tsv
tests/test_cli/: test_cli_smoke.py  test_pipeline_coverage.py  test_pipeline_fastqs.py  test_pipeline_kraken_bracken.py  test_pipeline_kraken_midas.py  test_pipeline_teton_accession.py  test_sysinfo.py
tests/test_core/: test_conda.py  test_outputs.py  test_parse.py  test_scaffold.py  test_summary.py  test_utils.py
tests/test_databases/: test_ena.py  test_ncbi.py
tests/test_lint/: test_citations.py  test_docs.py  test_subworkflow_rules.py  test_workflow_rules.py
tests/test_parsers/: test_amrfinderplus.py  test_annotator.py  test_assembler.py  test_citations.py  test_coverage.py  test_error.py  test_gather.py  test_generic.py  test_kraken.py  test_mlst.py  test_nextflow.py  test_parsables.py  test_qc.py  test_sketcher.py  test_versions.py  test_workflows_parser.py
(+5 files in other folders)
