[tool.poetry]
name = "bactopia"
version = "1.0.1"
description = "A Python package for working with Bactopia"
authors = [
    "Robert A. Petit III <robbie.petit@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://bactopia.github.io/"
repository = "https://github.com/bactopia/bactopia-py"
keywords = ["bioinformatics", "bacteria", "bactopia", "SRA", "ENA"]

[tool.poetry.scripts]
bactopia-citations = "bactopia.cli.citations:main"
bactopia-download = "bactopia.cli.download:main"
bactopia-prepare = "bactopia.cli.prepare:main"
bactopia-search = "bactopia.cli.search:main"
bactopia-summary = "bactopia.cli.summary:main"

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.28.2"
rich-click = "^1.6.1"
executor = "^23.2"
rich = "^13.3.1"
pandas = "^1.5.3"
pysradb = "^1.4.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.0"
flake8 = "^5.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
